TIFF & JPEG: handle Exif orientation

TIFF never handled it at all; JPEG has two cases that are broken:
- ORIENTATION_TOPRIGHT
- ORIENTATION_BOTLEFT

These were corrected and checked against Windows and macOS's CGImage
documentation.

BUG: 425832